CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
project(universe)

FIND_PACKAGE(OpenCL)
FIND_PACKAGE(OpenGL)
FIND_PACKAGE(GLEW)
FIND_PACKAGE(glm)
FIND_PACKAGE(glfw3)

INCLUDE_DIRECTORIES( 
    ${OPENGL_INCLUDE_DIR}
    ${GLEW_INCLUDE_PATH}
    ${GLFW3_INCLUDE_PATH}
    ${GLM_INCLUDE_PATH}
)

ADD_EXECUTABLE(universe
  src/main.cpp
  src/cll.cpp
  src/part2.cpp
  src/util.cpp)

TARGET_LINK_LIBRARIES (universe
   ${OPENGL_LIBRARIES}
   ${GLEW_LIBRARY}
   ${OpenCL_LIBRARY}
   ${GLFW3_LIBRARY}
)
